<resources>
    <string name="app_name">Pajelingo</string>

    <string name="dialog_confirm_resources_sync_title">Resources synchronization</string>
    <string name="dialog_confirm_resources_sync_message"> You are going to download the resources. Please make sure to be online.
        If you have provided notification permission to the app, you can follow the progress on the notifications.
    </string>
    <string name="dialog_confirm_resources_sync_confirm">Launch</string>
    <string name="dialog_confirm_resources_sync_decline">Cancel</string>

    <string name="dialog_delete_account_title">Delete account</string>
    <string name="dialog_delete_account_message">Are you sure that you want to delete your account? This action is permanent and irreversible</string>
    <string name="dialog_delete_account_confirm">Yes, delete account</string>
    <string name="dialog_delete_account_decline">Decline</string>

...
    <string name="tab_icon_search_title">Search word</string>
    <string name="tab_icon_synchro_title">Get resources</string>
    <string name="search_button_text">Search</string>
    <string name="search_edit_text_hint">Search something</string>
    <string name="tab_icon_login_title">Login</string>
    <string name="tab_icon_logout_title">Logout</string>
    <string name="sp_file_name">MySharedPref</string>
    <string name="is_syncing_sp">is_syncing</string>
    <string name="username_sp">username</string>
    <string name="email_sp">email</string>
    <string name="token_sp">token</string>
    <string name="picture_sp">picture</string>
    <string name="bio_sp">bio</string>
    <string name="badges_sp">badges</string>
    <string name="is_first_access">is_first_access</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="choose_language_label">Select a language</string>
    <string name="greeting_text">Welcome back, %1$s</string>
    <string name="tab_icon_rankings_title">Rankings</string>
    <string name="tab_icon_menu_title">Menu</string>
    <string name="all_languages_spinner_option">All languages</string>
    <string name="login_dialog_title">Please, wait</string>
    <string name="login_dialog_message">Verifying credentials…</string>
    <string name="warning_invalid_credentials">Invalid username or password</string>
    <string name="warning_connection_error">Connexion error, please verify your internet connection</string>
    <string name="warning_request_error">An error happened processing your request, please verify your internet connexion and try again</string>
    <string name="update_ranking_success_message">Rankings updated</string>
    <string name="no_resources_message">It seems that game data is missing… Do a sync (loop button on the top of the screen)
...
